@@ -8,10 +8,13 @@
   <utility provides=".userdataschema.IUserDataSchemaProvider"
            factory=".userdataschema.UserDataSchemaProvider"/>
 
+  <utility provides="Products.PlonePAS.interfaces.membership.IMembershipTool"
+          factory=".tools.MembershipTool"/>
+
   <adapter
     provides=".userdataschema.ICustomUserDataSchema"
     for="plone.app.layout.navigation.interfaces.INavigationRoot"
-    factory="plone.app.users.browser.personalpreferences.UserDataPanelAdapter"
+    factory=".userdataschema.CustomUserDataPanelAdapter"
     />
 
   <adapter factory=".userdataschema.CustomDefaultDashboard" />
