@@ -4,6 +4,10 @@ Changelog
 0.4 - unreleased
 ----------------
 
+- Extend member data to include phones, department, and two image sizes for
+  the portraits.
+  [ggozad, stefan]
+
 - Added basic upgrade step infrastructure.
   [hannosch]
 
